--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 spring:
+    config:
+        import: env.properties
     datasource:
-        password: hello
+        password: ${PASSWORD}
         url: jdbc:postgresql://127.0.0.1:35545/school
-        username: postgres
+        username: ${DB_USER}
     flyway:
         baseline-on-migrate: true
+    main:
+        banner-mode: off
