Created service layer of application.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
         url: jdbc:postgresql://127.0.0.1:35545/school
         username: ${DB_USER}
     flyway:
-        baseline-on-migrate: true
+        enabled: true
     main:
         banner-mode: off
